traversal.snake.Snake.scala.error
Compilation error:
Snake:11: error: method positionFinale has return statement; needs result type
              return true
              ^Snake:16: error: method positionFinale has return statement; needs result type
              return false
              ^Snake:24: error: method positionFinale has return statement; needs result type
                return true
                ^Snake:29: error: method positionFinale has return statement; needs result type
                  return false
                  ^Snake:35: error: method positionFinale has return statement; needs result type
    return false
    ^